@@ -21,7 +21,7 @@ buildscript {
 plugins {
     id 'application'
     id 'checkstyle'
-    id "com.github.spotbugs" version "5.0.13"
+    id "com.github.spotbugs" version "5.2.3"
     id 'de.undercouch.download' version '5.3.0'
     id 'java'
     // to help clarify conflicting logging providers
@@ -75,8 +75,7 @@ repositories {
     maven {
         // MovingBlocks Artifactory instance(s) for libs not readily available elsewhere plus our own libs
         name "Terasology Artifactory"
-        url "http://artifactory.terasology.org/artifactory/virtual-repo-live"
-        allowInsecureProtocol true
+        url "https://artifactory.terasology.io/artifactory/virtual-repo-live"
     }
     maven {
         name "JitPack"  // used by org.everit.json.schema
@@ -110,16 +109,16 @@ dependencies {
         because "de-/serialization of launcher properties to JSON"
     }
 
-    implementation('com.squareup.okhttp3:okhttp:4.10.0') {
+    implementation('com.squareup.okhttp3:okhttp:4.12.0') {
         because "built-in caching of HTTP requests"
     }
 
     // These dependencies are only needed for running tests
 
     testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 
     testImplementation('org.mockito:mockito-inline:5.2.0') {
         because "-inline build enables mocking final classes"
@@ -128,25 +127,23 @@ dependencies {
     }
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
-    testImplementation('org.spf4j:spf4j-slf4j-test:8.9.5') {
+    testImplementation('org.spf4j:spf4j-slf4j-test:8.10.0') {
         because "testable logging"
     }
-    testImplementation("org.slf4j:slf4j-api:1.7.+!!") {
-        because "spf4j-slf4j-test:8.8 needs slf4j-api:1.x"
-    }
+    testImplementation('org.slf4j:slf4j-api:2.0.13')
 
-    testImplementation("org.testfx:testfx-core:4.0.16-alpha") {
+    testImplementation("org.testfx:testfx-core:4.0.18") {
         because "to test JavaFX Application"
         // -alpha because that's the only kind of release they have?
     }
-    testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
+    testImplementation "org.testfx:testfx-junit5:4.0.18"
 
-    testImplementation("org.testfx:openjfx-monocle:jdk-12.0.1+2") {
+    testImplementation("org.testfx:openjfx-monocle:17.0.10") {
         // nobody's uploaded a jdk-14 build yet. does the jdk-12 one work?
         because "CI builders are headless environments"
     }
 
-    testImplementation('com.github.gmazzo:okhttp-mock:1.5.0') {
+    testImplementation('com.github.gmazzo.okhttp.mock:mock-client:2.0.0') {
         because "to easily write OkHttpClient interceptors for testing"
     }
     testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0') {
@@ -163,6 +160,8 @@ configurations.matching({ it =~ ~/test(Runtime|Compile|Implementation|PmdAux)Cla
     resolutionStrategy(gradlegoo.prefers("logging", "slf4j-impl-capability",
             "spf4j-slf4j-test", "tests use slf4j-test"))
 
+    // SPF4J has a dependency on "avro-logical-types-gen:1.3", which does not exist. However, version "1.3p" does.
+    resolutionStrategy.force('org.spf4j:avro-logical-types-gen:1.3p')
     // old hamcrest versions exist only to spite us
     // http://hamcrest.org/JavaHamcrest/distributables#upgrading-from-hamcrest-1x
     exclude group: "org.hamcrest", module: "hamcrest-core"
@@ -187,6 +186,10 @@ javafx {
 
 test {
     useJUnitPlatform()
+
+    // The SPF4J test dependency relies on some forbidden reflection to improve logging performance.
+    // Java 17 will not tolerate this without a bit of encouragement.
+    jvmArgs("--add-opens=java.logging/java.util.logging=ALL-UNNAMED")
 }
 
 checkstyle {
